[project]
name = "esm"
version = "3.2.0"
description = "EvolutionaryScale open model repository"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}

authors = [
  {name = "EvolutionaryScale Team"}
]

maintainers = [
  {name = "Zeming Lin", email = "zeming+esm@evolutionaryscale.ai" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "numpy<2",
  "torch>=2.2.0",
  "torchvision",
  "torchtext",
  "transformers<4.48.2",
  "ipython",
  "einops",
  "biotite>=1.0.0",
  "msgpack-numpy",
  "biopython",
  "scikit-learn",
  "brotli",
  "attrs",
  "pandas",
  "cloudpathlib",
  "tenacity",
  "zstd"
]
